# Travle_Agent

./: .gitignore
backend/: .env  .env.example  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  plan_agent.py  registry.py  runtime.py
backend/app/api/v1/: agent.py  dependencies.py  generate.py
backend/app/core/: config.py  errors.py
backend/app/integrations/: siliconflow_client.py
backend/app/models/: __init__.py  agent.py  travel.py
backend/app/prompts/: generate_itinerary.py
backend/app/providers/: __init__.py  base.py  registry.py  siliconflow.py
backend/app/schemas/: travel.py
backend/app/services/: fallback_service.py  itinerary_generation_service.py  plan_assembly_service.py  travel_service.py
backend/app/tools/: __init__.py  adapters.py  base.py  registry.py
backend/tests/: test_api.py  test_plan_agent.py  test_travel_service.py
docs/: GoWild-Architecture.md  GoWild-PRD.md  GoWild-Tech-Spec.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/components/: BrandHero.vue  TripForm.vue
frontend/src/modules/travel/: mockData.ts  store.ts  types.ts
frontend/src/modules/travel/components/: BudgetSummary.vue  ItineraryCard.vue  PlanSummary.vue  TipsList.vue
frontend/src/pages/: HomePage.vue  PlanPage.vue
frontend/src/router/: index.ts
frontend/src/services/: generatePlan.ts
frontend/src/styles/: main.css
